--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,17 @@
 /*fonts*/
 @import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap");
 /*selector universal*/
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+hr {
+  display: none;
 }
 
 footer {
@@ -126,10 +132,9 @@ body {
 }
 
 .art1 p {
-  font-family: "Roboto", sans-serif;
-  font-weight: bold;
   padding: 20px;
   line-height: 35px;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 .art2 {
@@ -150,8 +155,7 @@ body {
 }
 
 .art2 p {
-  font-family: "Roboto", sans-serif;
-  font-weight: bold;
+  font-family: "Roboto Condensed", sans-serif;
   padding: 20px;
   line-height: 35px;
 }
@@ -170,8 +174,7 @@ body {
 }
 
 .art3 p {
-  font-family: "Roboto", sans-serif;
-  font-weight: bold;
+  font-family: "Roboto Condensed", sans-serif;
   padding: 20px;
   line-height: 35px;
 }
@@ -218,9 +221,23 @@ body {
   width: 100%;
 }
 
-.artcursos p {
-  font-family: "Roboto", sans-serif;
-  font-weight: bold;
+.artcursos1 p {
+  font-family: "Roboto Condensed", sans-serif;
+  padding: 20px;
+  line-height: 35px;
+}
+.artcursos2 p {
+  font-family: "Roboto Condensed", sans-serif;
+  padding: 20px;
+  line-height: 35px;
+}
+.artcursos3 p {
+  font-family: "Roboto Condensed", sans-serif;
+  padding: 20px;
+  line-height: 35px;
+}
+.artcursos4 p {
+  font-family: "Roboto Condensed", sans-serif;
   padding: 20px;
   line-height: 35px;
 }
@@ -274,7 +291,7 @@ body {
 }
 
 .artservicios p {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   font-weight: bold;
   padding: 20px;
   line-height: 30px;
@@ -304,7 +321,7 @@ body {
 .temascursos li {
   padding-top: 20px;
   padding-right: 60px;
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   font-weight: bold;
 }
 
@@ -353,6 +370,9 @@ p img {
   margin-left: auto;
   margin-right: auto;
 }
+.contact-form h3 {
+  font-family: "Roboto Condensed", sans-serif;
+}
 
 .contact-form form {
   display: grid;
@@ -361,6 +381,7 @@ p img {
 
 .contact-form form label {
   display: block;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 .contact-form form p {
@@ -413,33 +434,73 @@ p img {
 }
 
 /*NOSOTROS*/
-.qstitle {
-  font-family: "Oswald", sans-serif;
-  font-weight: bold;
-  font-size: 36px;
+.qs {
+  margin-top: 5%;
 }
-.qscontainer img {
+.qs h1 {
+  font-size: 50px;
+  font-weight: 700;
+  font-family: "Bebas Neue", cursive;
+}
+.qs div {
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+}
+
+.qs .div2 {
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  font-family: "Roboto Condensed", sans-serif;
+}
+.qs .div3 {
+  margin-left: auto;
+  margin-right: auto;
+  width: 75%;
+}
+
+.div3 img {
+  height: 100%;
+  width: 100%;
+  padding-top: 20px;
+  padding-left: 10px;
+  border-radius: 30px;
+}
+.div3 small {
+  font-family: "Oswald", sans-serif;
+  font-weight: 700;
+  display: block;
+  padding-left: 2rem;
+}
+
+.groupcard {
+  display: flex;
+  flex-direction: row;
+}
+.div4 .card {
+  margin: 30px;
+}
+.card-title {
   width: 100%;
 }
-
-.qscontainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.card-text {
+  width: 100%;
+  height: auto;
+}
+.card-img-top {
+  height: 100%;
+}
+.card-text {
+  height: 100%;
+  width: 100%;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
-.qscontainer img {
-  border-radius: 55px;
-  padding: 20px;
+/*NOSOTROS*/
+label {
+  font-family: "Roboto Condensed", sans-serif;
 }
-
-.qscontainer p {
-  font-family: "Roboto", sans-serif;
-  font-weight: bold;
-  padding: 20px;
-  line-height: 30px;
-}
-
 .wrap {
   height: 100%;
   display: flex;
@@ -450,7 +511,7 @@ p img {
 .buttonform {
   min-width: 300px;
   min-height: 60px;
-  font-family: "Nunito", sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   font-size: 22px;
   text-transform: uppercase;
   letter-spacing: 1.3px;
@@ -512,7 +573,44 @@ button:focus::after {
     opacity: 0;
   }
 }
+@media screen and (max-width: 375px) {
+  /*HEADER*/
 
+  .qs h1 {
+    font-size: 28px;
+  }
+  .qs div {
+    width: 100%;
+    overflow: hidden;
+  }
+  .qs .div2 {
+    width: 100%;
+  }
+  .div3 {
+    width: 100%;
+  }
+
+  .groupcard {
+    width: 100%;
+    flex-direction: column;
+    height: 100%;
+    display: block;
+  }
+  .div4 .card {
+    width: 15rem;
+  }
+  hr {
+    display: block;
+    overflow: hidden;
+  }
+}
+@media screen and (max-width: 450px) {
+  /*HEADER*/
+  .navbar-brand {
+    font-size: 18px;
+  }
+  /*NOSOTROS*/
+}
 @media screen and (max-width: 768px) {
   /*FOOTER*/
   .container-fluid {
@@ -582,11 +680,7 @@ button:focus::after {
     width: 85%;
   }
   /*Cursos*/
-  /*Nosotros*/
-  .qscontainer img {
-    width: 100%;
-  }
-  /*Nosotros*/
+
   /*Servicios*/
   .serviciostitle {
     font-size: 30px;
@@ -600,7 +694,17 @@ button:focus::after {
   }
   /*Servicios*/
   /*Contacto*/
-  /*Contacto*/
+  /*Nosotros*/
+  .qs h1 {
+    font-size: 28px;
+  }
+  .groupcard {
+    width: 100%;
+    flex-direction: column;
+    height: 100%;
+    display: block;
+  }
+  /*Nosotros*/
 }
 @media screen and (max-width: 600px) {
   /*Contacto*/
@@ -611,6 +715,56 @@ button:focus::after {
   .contact-form form {
     display: flex;
     flex-direction: column;
+  }
+  .qs h1 {
+    font-size: 23px;
+  }
+  .qs div {
+    width: 90%;
+    overflow: hidden;
+  }
+  .qs .div2 {
+    width: 90%;
+  }
+  .div3 {
+    width: 90%;
+  }
+
+  .groupcard {
+    width: 100%;
+    flex-direction: column;
+    height: 100%;
+    display: block;
+  }
+  .div4 .card {
+    width: 100%;
+  }
+  hr {
+    display: block;
+    overflow: hidden;
+  }
+
+  /*Contacto*/
+}
+@media screen and (max-width: 1080px) {
+  /*Contacto*/
+  .groupcard {
+    width: 100%;
+    flex-direction: column;
+    height: 100%;
+    display: block;
+  }
+  .div4 .card {
+    width: 100%;
+  }
+
+  /*Contacto*/
+}
+@media screen and (max-width: 1330px) {
+  /*Contacto*/
+
+  .div4 .card {
+    width: 100%;
   }
 
   /*Contacto*/
